--- a/corgiTexter/templates/account.html
+++ b/corgiTexter/templates/account.html
@@ -1,6 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {% for post in posts %}
+        <article class="media content-section">
+            <img class="rounded-circle article-img" src="{{ url_for('static',filename='profilePics/' + post.author.image_file) }}">
+            <div class="media-body">
+                <div class="article-metadata">
+                    <a class="mr-2" href="#">{{ post.author.username }}</a>
+                    <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
+                </div>
+                <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.fact }}</a></h2>
+                <p class="article-content">{{ post.source }}</p>
+        	</div>
+        </article>
+    {% endfor %}
+
+
     <div class="content-section">
         <div class="media">
             <img class="rounded-circle account-img" src="{{ image_file }}">
