added verbage to about

--- a/corgiTexter/templates/about.html
+++ b/corgiTexter/templates/about.html
@@ -2,5 +2,12 @@
 
 {% block content %}
     <h1>About Page</h1>
+    <p>
+        Corgi Texter is a system that helps you and your friends quickly and easily obtain facts about our favorite pals, corgis. By texting <strong><a href="tel:(612)324-8563">(612)324-8563</a></strong> this number you will be sent a fun fact about a corgi along with a source just in case someone doesn't believe you and your quick reflexes.
+    </p>
+
+    <div class="corgi_gif">
+        <img src="{{ corgi_file }}"
+    </div>
 
 {% endblock content %}
