--- a/corgiTexter/static/main.css
+++ b/corgiTexter/static/main.css
@@ -8,6 +8,13 @@ h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
 
+.corgi_gif {
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
+
 .bg-steel {
   background-color: #5f788a;
 }
