--- a/corgiTexter/templates/home.html
+++ b/corgiTexter/templates/home.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <article class="media content-section">
+        <h2>Text<a href="tel:(612)324-8563"> (612)324-8563 </a> for a happy random fact about our good corgi pals!</h2>
+    </article>
     {% for post in posts %}
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{ url_for('static',filename='profilePics/' + post.author.image_file) }}">
