changed from tel to sms

--- a/corgiTexter/templates/home.html
+++ b/corgiTexter/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <article class="media content-section">
-        <h2>Text<a href="tel:(612)324-8563"> (612)324-8563 </a> for a happy random fact about our good corgi pals!</h2>
+        <h2>Text<a href="sms:(612)324-8563"> (612)324-8563 </a> for a happy random fact about our good corgi pals!</h2>
     </article>
     {% for post in posts %}
         <article class="media content-section">
